update counter docs
